add RDR board to home page

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -32,11 +32,11 @@
       <h2>Explore curated boards</h2>
       <div class="col-sm-6 col-md-4">
         <div class="curated-board">
-          <a href="/dashboards/PGb7iKt2FacvJ3M8R">
-            <img class="img-thumbnail" src="/dash_screenshot4.png" alt="Screenshot" />
-            <h2 class="curated-title">Affordability</h2>
+          <a href="/dashboards/6aNiYLZNBnDQ79Edw">
+            <img class="img-thumbnail" src="/dash_screenshot9.png" alt="Screenshot" />
+            <h2 class="curated-title">Ranking Digital Rights</h2>
             <span class="curated-caption">
-              <span>Countries with more affordable broadband tend to have higher Internet adoption.</span>
+              <span>RDR's Corporate Accountability Index examines companies' commitments, policies, and practices on freedom of expression & privacy. The verdict? Even companies in the lead are falling short.</span>
             </span>
           </a>
         </div>
