--- a/packages/imon-barchart/client/widget.css
+++ b/packages/imon-barchart/client/widget.css
@@ -21,3 +21,13 @@
   fill: #FF6A00 !important;
   opacity: 1 !important;
 }
+
+.imon-barchart .barchart-attr{
+	font-weight: bold;
+	opacity: 0.6;
+	font-size: 0.8em;
+	transition: opacity 0.5s;
+}
+.imon-barchart .barchart-attr:hover{
+	opacity: 1;
+}
