Fix home page stying picking up

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,5 +1,6 @@
 <template name="Home">
-<div class="container page">
+<body class="home">
+  <div class="container page">
   <div class="row">
     <div class="col-lg-8 homepage-description">
       <div class="panel panel-default">
@@ -129,5 +130,5 @@
   </div>
 
 </div>
-
+</body>
 </template>
