Notice message for access-index

--- a/packages/access-index/client/widget.css.less
+++ b/packages/access-index/client/widget.css.less
@@ -2,6 +2,10 @@
   .out-link {
     margin-left: 0.3em;
   }
+  .notice{
+    font-size: 0.5em;
+    font-weight: bold;
+  }
   .country-thumb {
     width: 60%;
     float: left;
