Change Berkman Klein title

--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,7 +1,7 @@
 <template name="Footer">
 <footer>
   <a href="https://thenetmonitor.org"><img alt="" class="footer-logo" src="/imon_logo_small.png"></a>
-  <a href="http://cyber.law.harvard.edu" title="Berkman Klein Center For Internet and Society" class="berkman-link"></a>
+  <a href="http://cyber.law.harvard.edu" title="Berkman Klein Center For Internet &amp; Society" class="berkman-link"></a>
   <nav>
     <ul>
       <li><a href="http://thenetmonitor.org/about">About</a></li>
