--- a/packages/imon-bubblechart/client/widget.css
+++ b/packages/imon-bubblechart/client/widget.css
@@ -24,6 +24,22 @@
   opacity: 1 !important;
 }
 
+.imon-bubblechart .animation-button{
+  background-color: transparent;
+  font-size:1.8em;
+  border: none;
+}
+
+.imon-bubblechart .bubblechart-year{
+  display: inline;
+  margin-bottom:0;
+  margin-top:0;
+}
+
+.imon-bubblechart .bubblechart-button{
+  float:right;
+}
+
 .imon-bubblechart .z-index{
   font-weight: bold;
   font-size: 1.1em;
