--- a/packages/imon-bubblechart/client/widget.css
+++ b/packages/imon-bubblechart/client/widget.css
@@ -25,6 +25,7 @@
 }
 
 .imon-bubblechart .animation-button{
+  display: none;
   background-color: transparent;
   font-size:1.8em;
   border: none;
