Disable/enable animation buttons based on position

--- a/packages/imon-bubblechart/client/widget.css
+++ b/packages/imon-bubblechart/client/widget.css
@@ -31,6 +31,11 @@
   border: none;
 }
 
+.imon-bubblechart .animation-button:disabled{
+  cursor: not-allowed;
+  color: #bdc3c7;
+}
+
 .imon-bubblechart .bubblechart-year{
   display: inline;
   margin-bottom:0;
