--- a/packages/imon-choropleth/client/widget.css
+++ b/packages/imon-choropleth/client/widget.css
@@ -2,6 +2,31 @@
   stroke: white;
 }
 
+.imon-choropleth .choropleth-button{
+	float: right;
+	margin-top:-1.8em;
+}
+.imon-choropleth .animation-button{
+  display: none;
+  background-color: transparent;
+  font-size:1.8em;
+  border: none;
+}
+
+.imon-choropleth .country{
+	transition-duration: 0.5s;
+}
+
+.imon-choropleth .choropleth-year h2{
+  display: inline;
+  margin-bottom:0;
+  margin-top:0;
+}
+.imon-choropleth .animation-button:disabled{
+  cursor: not-allowed;
+  color: #bdc3c7;
+}
+
 .indicator_name {
 
 }
