--- a/packages/imon-choropleth/client/widget.css
+++ b/packages/imon-choropleth/client/widget.css
@@ -13,6 +13,23 @@
   border: none;
 }
 
+.imon-choropleth .checkmark, .imon-choropleth .checkmark-bg{
+	font-size:0.6em;
+}
+.imon-choropleth .animation-button .checkmark-bg{
+	margin-left:-0.5em;
+	color:white;
+}
+.imon-choropleth .animation-button .checkmark{
+	margin-left:-0.85em;
+	color:#27ae60;
+}
+.imon-choropleth #loop-enabled.hidden{
+	display:none;
+}
+.imon-choropleth #loop-enabled.shown{
+	display:inline;
+}
 .imon-choropleth .country{
 	transition-duration: 0.5s;
 }
@@ -22,7 +39,7 @@
   margin-bottom:0;
   margin-top:0;
 }
-.imon-choropleth .animation-button:disabled{
+.imon-choropleth .animation-button:disabled, .imon-choropleth .animation-button:disabled #loop-enabled .checkmark{
   cursor: not-allowed;
   color: #bdc3c7;
 }
