Better adjustment for header in imon-choropleth

--- a/packages/imon-choropleth/client/widget.css
+++ b/packages/imon-choropleth/client/widget.css
@@ -1,7 +1,9 @@
 .imon-choropleth .country {
   stroke: white;
 }
-
+.imon-choropleth h1{
+	min-height: 2em;
+}
 .imon-choropleth .choropleth-button{
 	float: right;
 	margin-top:-1.8em;
