--- a/packages/imon-speedometer/client/widget.css
+++ b/packages/imon-speedometer/client/widget.css
@@ -2,6 +2,17 @@
   margin-top: 15%;
 }
 
+.imon-speedometer .title h2{
+	margin:0;
+	display:inline;
+}
+
+.imon-speedometer .title h3{
+	float:right;
+	display: inline;
+	margin:0;
+}
+
 .imon-speedometer .title h1{
 	text-transform: capitalize;
 }
