Filter by indicator and number of countries displayed

--- a/client/css/add_widget.css.less
+++ b/client/css/add_widget.css.less
@@ -16,6 +16,10 @@
       padding: 8px 30px;
       box-shadow: 0 2px 2px rgba(0, 0, 0, 0.08);
     }
+    .filter-control{
+      margin-left: .5em;
+      margin-right: .5em;
+    }
   }
 
   .add-widget-grid {
@@ -101,9 +105,23 @@
   padding-top: 2px;
   font-size: 12px;
 }
-.btn-group-label {
-  float: left;
+.btn-group-label, .filter-group-label {
   font-weight: bold;
   line-height: 34px;
   vertical-align: middle;
 }
+.btn-group-label{
+  float: left;
+}
+.filter-btn{
+  float:none !important;
+}
+.filter-toolbar{
+  .filter-year{
+    width:5.4em;
+  }
+  .filter-indicator{
+    width:14em;
+  }
+}
+
