--- a/client/templates/add_widget.html
+++ b/client/templates/add_widget.html
@@ -16,16 +16,21 @@
       <div class="modal-body">
       {{#if Template.subscriptionsReady }}
         <div class="btn-toolbar filter-toolbar" role="toolbar">
-          <form class="form-inline">
+          <form class="form-inline filter-form">
             <span class="filter-group-label">Show widgets that display</span>
+            <div class="btn-group filter-mode-group" role="group">
+              <button type="button" class="btn btn-default filter-mode-btn" id="filter-year">Year</button>
+              <button type="button" class="btn btn-default filter-mode-btn" id="filter-indicator" style="margin-left:-.3em;">Indicator</button>
+            </div>
             <div class="form-group">
-              <select class="filter-indicator form-control filter-control">
-                <option value="any-indicators" selected>any indicators</option>
+              <select class="filter-indicator form-control filter-control" style="display:none;">
+                <option value="any-indicators" selected>any indicator(s)</option>
                 <option value="all-indicators">all indicators</option>
                 {{# each indicator}}
                 <option value="{{ adminName }}">{{ shortName }}</option>
                 {{/each}}
               </select>
+              <input class="filter-year form-control filter-control" style="display:none;" type="number" min="1900" max="{{ thisYear }}" placeholder="Year" />
             </div>
             <span class="filter-group-label">in</span>
             <div class="form-group">
@@ -35,7 +40,16 @@
                 <option value="multi">multiple countries (compared)</option>
               </select>
             </div>
-            <button type="button" class="btn btn-default filter-btn filter-submit" title="Filter"><i class="fa fa-filter"></i></button>
+            <span class="filter-group-label">including</span>
+            <div class="form-group">
+              <select class="filter-countries form-control filter-control">
+                <option value="any-country" selected>any country</option>
+                {{# each country}}
+                <option value="{{ code }}">{{ name }}</option>
+                {{/each}}
+              </select>
+            </div>
+            <button type="submit" class="btn btn-default filter-btn filter-submit" title="Filter"><i class="fa fa-filter"></i></button>
             <button type="reset" class="btn btn-default filter-btn clear-filter" title="Clear"><i class="fa fa-minus-square-o"></i></button>
           </form>
         </div>
