Add year selection to connection-speed, broadband-cost, percent-online, and percent-on-broadband

--- a/packages/connection-speed/client/widget.css
+++ b/packages/connection-speed/client/widget.css
@@ -1,3 +1,11 @@
 .connection-speed .gauge {
   margin-top: 15%;
 }
+
+.connection-speed h2, .connection-speed h3{
+	display: inline;
+}
+
+.connection-speed h3{
+	float:right;
+}
