Add settings helpers to widgets

--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -27,6 +27,7 @@
   }
 
 
+
   .title-bar {
     width: 100%;
     background-color: rgba(236, 236, 236, 0.6);
@@ -34,6 +35,13 @@
     cursor: move;
     white-space: nowrap;
 
+    .widget-settings-helper{
+    display: inline-block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.7em;
+    text-overflow: hidden;
+    }
     .buttons {
       padding-left: 4px;
       padding-top: 1px;
