Vertical align helper text in widgets

--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -41,6 +41,7 @@
     text-transform: uppercase;
     font-size: 0.7em;
     text-overflow: hidden;
+    vertical-align: text-top;
     }
     .buttons {
       padding-left: 4px;
