fix double body issue

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,6 +1,5 @@
 <template name="Home">
-<body class="home">
-  <div class="container page">
+  <div class="home container page">
   <div class="row">
     <div class="col-lg-8 homepage-description">
       <div class="panel panel-default">
@@ -126,9 +125,6 @@
       </div>
       <p class="lead"><a href="//thenetmonitor.org/faq/using-a-dashboard-template">Template FAQ &raquo;</a></p>
     </div>
-
   </div>
-
 </div>
-</body>
 </template>
