--- a/packages/ac-theme-in-country/client/widget.scss
+++ b/packages/ac-theme-in-country/client/widget.scss
@@ -1,14 +1,27 @@
-#container {
-  width: 100%;
+.ac-theme-in-country {
+  h1 {
+    font-size: 1.5em;
+  }
+  h2 {
+    font-size: 1.3em;
+  }
 }
+.glyphicon-full-dot:before {
+    content:"\25cf";
+    font-size: 2em;
+}
+
 .bar-collection {
+  margin-top: 1em;
   width: 100%;
   border-collapse: collapse;
 
   th {
-    text-align: left;
-    position: relative;
-    left: -0.9em;
+    text-align: right;
+    transform: rotate(10deg);
+    transform-origin: bottom right;
+    font-weight: normal;
+    font-size: 0.9em;
   }
 
   .bar-container {
@@ -20,17 +33,30 @@
       border-radius: 6px 0 0 6px;
       border-left: 0;
     }
-    &:nth-last-of-type(2) .bar {
+    &:last-of-type .bar {
       border-radius: 0 6px 6px 0;
-    }
-    &:last-of-type {
-      .bar {
-        width: 0;
-        border-left: 0;
-      }
     }
     &.selected .bar {
       border-left: 0;
+    }
+    &.last-selected {
+      text-align: right;
+      .bar {
+        border-left: 1px solid #bbb;
+      }
+    }
+
+    &:nth-child(2) .marker {
+      color: #2ca02c;
+    }
+    &:nth-child(3) .marker {
+      color: #428bca;
+    }
+    &:nth-child(4) .marker {
+      color: #ff7f0e;
+    }
+    &:nth-child(5) .marker {
+      color: #d62728;
     }
   }
 
@@ -39,13 +65,17 @@
     width: 100%;
     height: 10px;
     margin-top: 5px;
-    background-color: lightgray;
-    border-left: 1px solid black;
+    background-color: #f1f1f1;
+    border-left: 1px solid #bbb;
   }
 
   .marker {
     position: relative;
-    left: -7px;
-    top: -0.4em;
+    left: -8px;
+    top: -1.1em;
+
+    &.marker-right {
+      left: 7px;
+    }
   }
 }
