--- a/client/css/boards.css.less
+++ b/client/css/boards.css.less
@@ -1,11 +1,15 @@
 @import url(//fonts.googleapis.com/css?family=Lato:100,300,400,700);
 
-body {
+body.loaded {
   background-color: #081F2C;
+  overflow-y: scroll;
+}
+
+body {
+  background-color: transparent;
   font-family: Lato;
   font-weight: 300;
   padding-top: 50px;
-  overflow-y: scroll;
 }
 
 h1, h2, h3 {
