--- a/client/css/loading.css
+++ b/client/css/loading.css
@@ -1,3 +1,10 @@
+.sk-circle.embed-loading {
+  margin: 20px auto;
+}
+.sk-circle.embed-loading .sk-child:before {
+  background-color: #5A9DCE;
+}
+
 .sk-circle.page-loading {
   width: 70px;
   height: 80px;
