--- a/packages/ac-theme-in-country/client/widget.scss
+++ b/packages/ac-theme-in-country/client/widget.scss
@@ -1,17 +1,3 @@
-.iframebody {
-  .ac-theme-in-country {
-    h1, .title-bar { display: none; }
-    border: 0 !important;
-    border-radius: 0;
-    box-shadow: none !important;
-    background-color: transparent;
-    height: 100% !important;
-  }
-  .ac-theme-in-country ~ .imon-branding {
-    display: none;
-  }
-}
-
 .ac-theme-in-country {
   h1 {
     font-size: 1.5em;
@@ -79,7 +65,7 @@
     width: 100%;
     height: 10px;
     margin-top: 5px;
-    background-color: #f1f1f1;
+    background-color: rgba(200, 200, 200, 0.3);
     border-left: 1px solid #bbb;
   }
 
