--- a/packages/widget/client/widget.css.less
+++ b/packages/widget/client/widget.css.less
@@ -26,8 +26,6 @@
     color: #666;
   }
 
-
-
   .title-bar {
     width: 100%;
     background-color: rgba(236, 236, 236, 0.6);
@@ -35,15 +33,16 @@
     cursor: move;
     white-space: nowrap;
     height:1.5em;
+    overflow: hidden;
 
     .buttons {
       margin-left: 4px;
-      margin-top: 1px;
+      margin-top: 2px;
       max-width: 60px;
       cursor: default;
 
       a {
-        color: #BABABA;        
+        color: #BABABA;
 
         &:hover, &:focus {
           text-decoration: none;
@@ -68,6 +67,7 @@
     .data-source {
       padding: 0;
       margin: 0;
+      margin-top: 1px;
       padding-right: 6px;
       float: right;
       z-index: 1000;
