--- a/packages/widget/client/embed.css.less
+++ b/packages/widget/client/embed.css.less
@@ -45,8 +45,8 @@ body.loaded.widgets-embed {
   .imon-branding {
     text-align: center;
     padding-top: 3px;
-    height:30px;
-    background-color: #F1F1F1;
+    height: 30px;
+    background-color: #eee;
   }
 
   img.iframe-logo-img {
