--- a/packages/imon-country-profile/client/widget.css.less
+++ b/packages/imon-country-profile/client/widget.css.less
@@ -1,6 +1,12 @@
 .imon-country-profile {
   dt {
     width: 220px;
+    float: left;
+    overflow: hidden;
+    clear: left;
+    text-align: right;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
   dd {
     margin-left: 240px;
