option to remove country name from widgets - #14404

--- a/packages/broadband-cost/client/widget.css.less
+++ b/packages/broadband-cost/client/widget.css.less
@@ -1,4 +1,9 @@
 .broadband-cost {
+  &.country-hidden {
+    table {
+      margin-top: 1.5rem;
+    }
+  }
   table.cost-indicators {
     td, th {
       text-align: center;
