--- a/packages/gsma-total/client/widget.css
+++ b/packages/gsma-total/client/widget.css
@@ -43,3 +43,7 @@
 .gsma-total .epoch.mobile-connections .line {
   stroke-width: 1.5px;
 }
+
+.gsma-total.country-hidden .current-data {
+  margin-top: 1.5rem;
+}
