--- a/packages/percent-on-broadband/client/widget.css
+++ b/packages/percent-on-broadband/client/widget.css
@@ -36,3 +36,12 @@
   bottom: 20px;
   color: #888;
 }
+
+.percent-on-broadband.country-hidden .online-users {
+  margin-top: 1.5rem;
+}
+
+.percent-on-broadband.country-hidden .indicator-value {
+  top: 5.5rem;
+  bottom: auto;
+}
