--- a/packages/widget/client/embed.css.less
+++ b/packages/widget/client/embed.css.less
@@ -21,12 +21,6 @@ body.loaded.widgets-embed {
     }
   }
 
-  &.unbranded {
-    .imon-branding, .title-bar {
-      display: none;
-    }
-  }
-
   .widget {
     border-radius: 0;
     border: 4px solid #eee;
@@ -51,6 +45,19 @@ body.loaded.widgets-embed {
 
   img.iframe-logo-img {
     display: inline-block;
+  }
+
+  .unbranded-info {
+    .button-info {
+      cursor: pointer;
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      color: #ccc;
+      &:hover {
+        color: #6192BD;
+      }
+    }
   }
 }
 
