fix widget embed styling

--- a/packages/widget/client/embed.css.less
+++ b/packages/widget/client/embed.css.less
@@ -1,7 +1,7 @@
 body {
   background-color: transparent;
 }
-body.loaded.widgets-embed {
+body.loaded.on-widgets-embed {
   padding-top: 0;
   overflow: auto;
   background-color: transparent;
