add more font controls for user content - #14660

--- a/packages/user-content/client/widget.css
+++ b/packages/user-content/client/widget.css
@@ -16,3 +16,7 @@
   font-weight: bold;
   text-align: center;
 }
+.user-content .user-content-text {
+  line-height: 1.2em;
+  display: inline-block;
+}
